# sync-monitor

./: CMakeLists.txt  LICENSE.LGPL  README.md  config.h.in
Ubuntu/: CMakeLists.txt
Ubuntu/SyncMonitor/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir  syncmonitor-qml.cpp  syncmonitor-qml.h
accounts/: CMakeLists.txt
accounts/applications/: CMakeLists.txt  calendar-sync.application.in  contacts-sync.application.in  google-caldav.application.in  google-carddav.application.in
accounts/desktop/: CMakeLists.txt  sync-monitor-calendar.desktop.in  sync-monitor-contacts.desktop.in
accounts/plugin/: CMakeLists.txt  generic-caldav.provider.in
accounts/plugin/qml/: Main.qml  NewAccount.qml
accounts/services/: CMakeLists.txt  generic-caldav.service.in  google-caldav.service.in  google-carddav.service.in  nextcloud-caldav.service.in  owncloud-caldav.service.in  yahoo-caldav.service.in  yahoo-carddav.service.in
authenticator/: CMakeLists.txt  main.cpp  main.qml  syncmonitor.url-dispatcher  syncmonitorhelper.desktop.in  syncmonitorhelper.url-dispatcher
data/: CMakeLists.txt  com.canonical.SyncMonitor.service.in
debian/: changelog  control  copyright  qtdeclarative5-ubuntu-syncmonitor0.1.install  rules  sync-monitor-helper.install  sync-monitor-uoa-calendar.install  sync-monitor-uoa-contacts.install  sync-monitor-uoa.install  sync-monitor.install
po/: CMakeLists.txt  POTFILES.in  am.po  ast.po  be.po  bn_BD.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  gd.po  gl.po  he.po  hr.po  hu.po  hy.po  ia.po  id.po  it.po  ja.po  km.po  ko.po  ms.po  nb.po  nl.po  oc.po  pl.po  pt.po  (+17 more)
src/: CMakeLists.txt  address-book-trigger.cpp  address-book-trigger.h  eds-helper.cpp  eds-helper.h  main.cpp  notify-message-mock.cpp  notify-message-notify.cpp  notify-message.cpp  notify-message.h  powerd-proxy.cpp  powerd-proxy.h  provider-template.cpp  provider-template.h  sync-account.cpp  sync-account.h  sync-auth.cpp  sync-auth.h  sync-configure.cpp  sync-configure.h  sync-daemon.cpp  sync-daemon.h  sync-dbus.cpp  sync-dbus.h  sync-i18n.h  sync-network.cpp  sync-network.h  sync-queue.cpp  sync-queue.h  syncevolution-server-proxy.cpp  syncevolution-server-proxy.h  syncevolution-session-proxy.cpp  syncevolution-session-proxy.h
templates/: CMakeLists.txt  generic-caldav.conf  google.conf  nextcloud.conf  owncloud.conf  yahoo.conf
tests/unittest/: CMakeLists.txt  eds-helper-mock.h  eds-helper-test.cpp  sync-account-mock.h  sync-queue-test.cpp  syncevolution-output-parser.cpp
upstart/: CMakeLists.txt  sync-monitor.conf.in
